--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
+ @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
  * {
      margin: 0;
      padding: 0;
      box-sizing: border-box;
-     transition: .2s linear;
+     transition: all .8s linear;
      border: none;
      outline: none;
  }
@@ -44,9 +46,128 @@
  .form-search-btn {
      padding: .7rem .7rem;
      font-size: 1.1rem;
+     background: #fca311;
  }
 
  .main-container {
      margin-left: 3rem;
      margin-right: 3rem;
+ }
+
+ .main-container img {
+     margin-top: 1.5rem;
+ }
+
+ .plot {
+     padding: 1.2rem 1.2rem;
+     background: #dee2e6;
+     border-radius: .5rem;
+
+     margin-top: 1.1rem;
+
+     font-family: "Open Sans", sans-serif;
+     font-optical-sizing: auto;
+     font-weight: 300;
+     font-style: normal;
+     font-variation-settings:
+         "wdth" 100;
+     font-size: 1.1rem;
+ }
+
+ .ratings {
+     /* background: red; */
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     font-size: 1.3rem;
+     gap: .6rem;
+     padding: 1rem 0rem;
+ }
+
+ .ratings strong {
+     font-size: 1.5rem;
+ }
+
+
+ .ratings strong+i {
+     color: #ffb700;
+ }
+
+ .cast {
+     background-color: lightblue;
+     padding: 1rem 1rem;
+     border-radius: .5rem;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     flex-direction: column;
+     gap: .9rem;
+     font-family: "Open Sans", sans-serif;
+     font-optical-sizing: auto;
+     font-weight: 300;
+     font-style: normal;
+     font-variation-settings:
+         "wdth" 100;
+
+ }
+
+ .cast-header {
+     font-size: 1.2rem;
+     padding: .3rem 1rem;
+     border-radius: .3rem;
+     font-weight: 600;
+     border-bottom: 1px solid #0000bd;
+ }
+
+ .director {
+     background: #dee2e6;
+     font-family: "Open Sans", sans-serif;
+     font-optical-sizing: auto;
+     font-weight: 300;
+     font-style: normal;
+     font-variation-settings:
+         "wdth" 100;
+     font-size: 1.1rem;
+     margin-top: 1rem;
+     padding: 1rem 1rem;
+     border-radius: .5rem;
+
+ }
+
+ .genre {
+     background: #dee2e6;
+     font-family: "Open Sans", sans-serif;
+     font-optical-sizing: auto;
+     font-weight: 300;
+     font-style: normal;
+     font-variation-settings:
+         "wdth" 100;
+     font-size: 1.1rem;
+     margin-top: 1rem;
+     padding: 1rem 1rem;
+     border-radius: .5rem;
+     margin-bottom: 5rem;
+ }
+
+ .footer {
+     background: #003049;
+     padding: 1rem 1rem;
+     color: white;
+     font-family: "Open Sans", sans-serif;
+     font-optical-sizing: auto;
+     font-weight: 300;
+     font-style: normal;
+     font-variation-settings:
+         "wdth" 100;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     font-size: 1.7rem;
+ }
+
+ @media (width>543px) {
+     .navbar {
+         flex-direction: row;
+     }
  }
