--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
  body {
      min-height: 100vh;
      width: 100%;
+     background: url("moviesBg.jpg");
+     background-size: cover;
+     background-position: center;
+     background-repeat: no-repeat;
  }
 
  .navbar {
@@ -164,10 +168,39 @@
      align-items: center;
      justify-content: center;
      font-size: 1.7rem;
+     position: fixed;
+     bottom: 0;
+     left: 0;
+     right: 0;
  }
 
- @media (width>543px) {
+ @media (width>664px) {
      .navbar {
+         display: flex;
          flex-direction: row;
      }
+
+
+
+     .movie-details-wrapper {
+         background-color: #bbb8b8;
+         padding: 2rem 2rem;
+         display: flex;
+         flex-wrap: wrap;
+         flex-direction: column;
+         max-width: 30%;
+         margin-left: auto;
+         margin-right: auto;
+         margin-top: 3rem;
+         margin-bottom: 8rem;
+         border-radius: .7rem;
+
+     }
+
+     .movie-details-wrapper img {
+         max-width: 90%;
+         margin-left: auto;
+         margin-right: auto;
+     }
+
  }
