Changed the color of the main container

--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@
 
 
      .movie-details-wrapper {
-         background-color: #bbb8b8;
+         background-color: #e4e4e4;
          padding: 2rem 2rem;
          display: flex;
          flex-wrap: wrap;
